--- a/src/app/modules/goods/locales/en.json
+++ b/src/app/modules/goods/locales/en.json
@@ -18,7 +18,8 @@
       "description_ru": "Description RU",
       "height": "Height",
       "width": "Width",
-      "length": "Length"
+      "length": "Length",
+      "categoryId": "Category"
     },
     "buttons": {
       "create": "Add new Goods",
