--- a/src/app/modules/goods/locales/ro.json
+++ b/src/app/modules/goods/locales/ro.json
@@ -18,7 +18,8 @@
       "description_ru": "Descriere RU",
       "height": "Înălţime",
       "width": "Lăţime",
-      "length": "Lungime"
+      "length": "Lungime",
+      "categoryId": "Categoria"
     },
     "buttons": {
       "create": "Adauga marfă",
