--- a/src/app/modules/goods/locales/ru.json
+++ b/src/app/modules/goods/locales/ru.json
@@ -18,7 +18,8 @@
       "description_ru": "Описание RU",
       "height": "Высота",
       "width": "Ширина",
-      "length": "Длина"
+      "length": "Длина",
+      "categoryId": "Категория"
     },
     "buttons": {
       "create": "Добавить товар",
